need getle16() for ext.sub_tag too

PR bin/52762 by Yosuke Sugahara