usr.bin/audio/common/wav.c
@@ -1,4 +1,4 @@
-/*	$NetBSD: wav.c,v 1.13 2015/08/05 06:54:39 mrg Exp $	*/
+/*	$NetBSD: wav.c,v 1.14 2017/11/25 17:18:15 jdolecek Exp $	*/
 
 /*
  * Copyright (c) 2002, 2009 Matthew R. Green
@@ -33,7 +33,7 @@
 #include <sys/cdefs.h>
 
 #ifndef lint
-__RCSID("$NetBSD: wav.c,v 1.13 2015/08/05 06:54:39 mrg Exp $");
+__RCSID("$NetBSD: wav.c,v 1.14 2017/11/25 17:18:15 jdolecek Exp $");
 #endif
 
 
@@ -140,7 +140,7 @@ audio_wav_parse_hdr(void *hdr, size_t sz, u_int *enc, u_int *prec,
 		memcpy(&ext, owhere + sizeof fmt, sizeof ext);
 		if (getle16(ext.len) < sizeof(ext) - sizeof(ext.len))
 			return (AUDIO_ESHORTHDR);
-		fmttag = ext.sub_tag;
+		fmttag = getle16(ext.sub_tag);
 		if (verbose)
 			printf("WAVE extensible sub tag: %x\n", fmttag);
 	}
